// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CVUAliasInput is neither optional nor required when specified 1`] = `
<Input
  autoCorrect={false}
  label="account #"
  placeholder="12345678901234567890"
/>
`;

exports[`CVUAliasInput is optional when specified 1`] = `
<Input
  autoCorrect={false}
  label="account #"
  placeholder="12345678901234567890"
  required={false}
/>
`;

exports[`CVUAliasInput renders correctly 1`] = `
<Input
  autoCorrect={false}
  label="account #"
  placeholder="12345678901234567890"
/>
`;
